- Fixed Strange alignment of multi-line menu items (#36)
- Carousel removed from Search.html
- Fixed empty searching, now gives appropriate output
- Left-Aligned Admissions Text

--- a/source/css/modal.css
+++ b/source/css/modal.css
@@ -24,7 +24,7 @@ div.modal-inner-wrapper div.modal-text-wrapper {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: start;
     font-family: 'Century Gothic', 'Futura', 'Didact Gothic', san-serif;
     padding: 8px;
 }
